--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 * {
   padding:0;
   margin:0;
+  /* overflow-x: hidden; */
 }
 
 body {
@@ -10,5 +11,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
